--- a/.github/ISSUE_TEMPLATE/이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/이슈-템플릿.md
@@ -7,13 +7,20 @@ assignees: ''
 
 ---
 
+<!— 이렇게 되어 있는 부분은 삭제하세요. —>
+
 ## 📌 Issue
 <!— 이슈에 대해 간략하게 설명해주세요 —>
 client에서 POST 요청이 들어왔을땐 어떻게 해야할까요?
 
+## 📸 ScreenShot
+<!— 스크린샷을 넣고 기능에 대해 설명해주세요 ->
+|기능|스크린샷|
+|:--:|:--:|
+||<img src = "">
+||<img src = "">
+
 ## 📝 To-do
 <!— 진행할 작업에 대해 적어주세요 —>
 - TODO
-- [] 운영체제 공부하기
-- [] Pointer 개념 공부하기
-- [] st 삭제하기
+- [ ]
