--- a/.github/ISSUE_TEMPLATE/이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/이슈-템플릿.md
@@ -7,7 +7,7 @@ assignees: ''
 
 ---
 
-<!— 이렇게 되어 있는 부분은 삭제하세요. —>
+<!— 이렇게 되어 있는 부분은 세요. —>
 
 ## 📌 Issue
 <!— 이슈에 대해 간략하게 설명해주세요 —>
@@ -22,5 +22,4 @@ client에서 POST 요청이 들어왔을땐 어떻게 해야할까요?
 
 ## 📝 To-do
 <!— 진행할 작업에 대해 적어주세요 —>
-- TODO
-- [ ]
+- [ ] 
