chore: Update 개인정보처리방침.md
chore: Update 개인정보처리방침.md

--- a/개인정보처리방침.md
+++ b/개인정보처리방침.md
@@ -44,8 +44,15 @@
 
 1. < CSSP >
 개인정보를 제공받는 자 : CSSP
-제공받는 자의 개인정보 이용목적 : 이름, 얼굴
-제공받는 자의 보유.이용기간: 지체없이 파기
+제공하는 개인정보 항목 : 이름
+제공받는 자의 개인정보 이용목적 : 컨텐츠에 표기하기 위해서 수집합니다.
+제공받는 자의 보유.이용기간 : 지체없이 파기
+
+2. < CSSP >
+개인정보를 제공받는 자 : CSSP
+제공하는 개인정보 항목 : 얼굴
+제공받는 자의 개인정보 이용목적 : 회사는 TrueDepth API를 사용하여 ‘TrueDepth 카메라’의 ‘얼굴 좌표’를 수집하고, 수집한 내용을 기반으로 윙크와 혀 내밀기를 감지합니다. 단, 회사가 수집한 '얼굴 좌표'는 '얼굴 인식' 기능을 실행하기 위한 목적으로만 사용되며, 서버에 저장되거나 제3자와 공유되지 않습니다.
+제공받는 자의 보유.이용기간 : 지체없이 파기
 
 
 제5조(개인정보의 파기절차 및 파기방법)
